calculate values for variables

--- a/2.Insights.ipynb
+++ b/2.Insights.ipynb
@@ -564,6 +564,251 @@
    "source": [
     "All values are acceptable"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c8506d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Highest level of education</th>\n",
+       "      <th>Marital Status</th>\n",
+       "      <th>Have used online shopping platforms before</th>\n",
+       "      <th>Professional Background</th>\n",
+       "      <th>General E-Commerce Platforms</th>\n",
+       "      <th>Specialty Online Stores / automobile</th>\n",
+       "      <th>Online pharmacies</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Q56</th>\n",
+       "      <th>Q57</th>\n",
+       "      <th>Q58</th>\n",
+       "      <th>Q59</th>\n",
+       "      <th>Made online purchases</th>\n",
+       "      <th>Perceived Ease of Use</th>\n",
+       "      <th>Perceived Usefulness</th>\n",
+       "      <th>Structural Assurance</th>\n",
+       "      <th>Social Influence (SI)</th>\n",
+       "      <th>Intention to Purchase Online</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>25 - 35</td>\n",
+       "      <td>Bachelor's Degree</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Employed (full-time)</td>\n",
+       "      <td>Daraz.Lk, Ikman.Lk</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>-1.667</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>-0.333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>25 - 35</td>\n",
+       "      <td>Bachelor's Degree</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Employed (full-time)</td>\n",
+       "      <td>Daraz.Lk, Ikman.Lk</td>\n",
+       "      <td>Patpat.lk</td>\n",
+       "      <td>Epharma.Lk, Onlinepharmacy.Lk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.667</td>\n",
+       "      <td>0.333</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>25 - 35</td>\n",
+       "      <td>Bachelor's Degree</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Employed (full-time)</td>\n",
+       "      <td>Daraz.Lk, Ikman.Lk, Kapruka.Com</td>\n",
+       "      <td>Patpat.lk, Riyasewana.lk</td>\n",
+       "      <td>Healthguard.Lk, Onlinepharmacy.Lk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.667</td>\n",
+       "      <td>1.667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>25 - 35</td>\n",
+       "      <td>Master's Degree or higher</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Employed (full-time)</td>\n",
+       "      <td>Daraz.Lk, Ikman.Lk</td>\n",
+       "      <td>LankaVehicle.com</td>\n",
+       "      <td>Onlinepharmacy.Lk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1.083</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>25 - 35</td>\n",
+       "      <td>Bachelor's Degree</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Employed (full-time)</td>\n",
+       "      <td>Daraz.Lk, Wow.Lk</td>\n",
+       "      <td>Riyasewana.lk</td>\n",
+       "      <td>Ceymed.Lk, Epharma.Lk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.667</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>0.667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 64 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  Gender      Age Highest level of education  Marital Status  \\\n",
+       "0           0    Male  25 - 35           Bachelor's Degree         Single   \n",
+       "1           1    Male  25 - 35           Bachelor's Degree         Single   \n",
+       "2           2  Female  25 - 35           Bachelor's Degree         Single   \n",
+       "3           3  Female  25 - 35   Master's Degree or higher        Married   \n",
+       "4           4    Male  25 - 35           Bachelor's Degree        Married   \n",
+       "\n",
+       "  Have used online shopping platforms before  Professional Background  \\\n",
+       "0                                         Yes    Employed (full-time)   \n",
+       "1                                         Yes    Employed (full-time)   \n",
+       "2                                         Yes    Employed (full-time)   \n",
+       "3                                         Yes    Employed (full-time)   \n",
+       "4                                         Yes    Employed (full-time)   \n",
+       "\n",
+       "      General E-Commerce Platforms Specialty Online Stores / automobile  \\\n",
+       "0               Daraz.Lk, Ikman.Lk                                  NaN   \n",
+       "1               Daraz.Lk, Ikman.Lk                            Patpat.lk   \n",
+       "2  Daraz.Lk, Ikman.Lk, Kapruka.Com             Patpat.lk, Riyasewana.lk   \n",
+       "3               Daraz.Lk, Ikman.Lk                     LankaVehicle.com   \n",
+       "4                 Daraz.Lk, Wow.Lk                        Riyasewana.lk   \n",
+       "\n",
+       "                   Online pharmacies  ... Q56 Q57  Q58  Q59  \\\n",
+       "0                                NaN  ...   0   0   -1    0   \n",
+       "1      Epharma.Lk, Onlinepharmacy.Lk  ...   1   1    1    1   \n",
+       "2  Healthguard.Lk, Onlinepharmacy.Lk  ...   1   2    2    1   \n",
+       "3                  Onlinepharmacy.Lk  ...   1   1    1    1   \n",
+       "4              Ceymed.Lk, Epharma.Lk  ...   1   1    1    0   \n",
+       "\n",
+       "   Made online purchases  Perceived Ease of Use  Perceived Usefulness  \\\n",
+       "0                    Yes                    0.8                   0.6   \n",
+       "1                    Yes                    0.3                   0.2   \n",
+       "2                    Yes                    0.7                   0.7   \n",
+       "3                    Yes                   -0.4                   0.4   \n",
+       "4                    Yes                    0.7                   1.3   \n",
+       "\n",
+       "   Structural Assurance  Social Influence (SI)  Intention to Purchase Online  \n",
+       "0                -1.667                  0.167                        -0.333  \n",
+       "1                 0.667                  0.333                         1.000  \n",
+       "2                 1.000                  0.667                         1.667  \n",
+       "3                 1.000                  1.083                         1.000  \n",
+       "4                 0.667                  0.750                         0.667  \n",
+       "\n",
+       "[5 rows x 64 columns]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rounded_mean(x):\n",
+    "    return round(x.mean(), 3)\n",
+    "\n",
+    "for index, key in enumerate(related_questions_lists):\n",
+    "    df[key] = df[related_questions_lists[key]].apply(rounded_mean, axis=1)\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9a3d937",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
